--- a/package.json
+++ b/package.json
@@ -17,6 +17,12 @@
   },
   "homepage": "https://github.com/giolf/awesome-portfolio#readme",
   "devDependencies": {
-    "gulp": "^3.9.1"
+    "babel-core": "^6.18.2",
+    "babel-loader": "^6.2.7",
+    "babel-preset-es2015": "^6.18.0",
+    "gulp": "^3.9.1",
+    "jquery": "^3.1.1",
+    "webpack": "^1.13.3",
+    "webpack-stream": "^3.2.0"
   }
 }
