--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "babel-loader": "^6.2.7",
     "babel-preset-es2015": "^6.18.0",
     "gulp": "^3.9.1",
+    "gulp-flatten": "^0.3.1",
+    "gulp-sass": "^2.3.2",
     "jquery": "^3.1.1",
     "webpack": "^1.13.3",
     "webpack-stream": "^3.2.0"
