--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gulp-flatten": "^0.3.1",
     "gulp-sass": "^2.3.2",
     "gulp-total-task-time": "^0.1.0",
+    "imports-loader": "^0.6.5",
     "jquery": "^3.1.1",
     "webpack": "^1.13.3",
     "webpack-stream": "^3.2.0"
