--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gulp-total-task-time": "^0.1.0",
     "imports-loader": "^0.6.5",
     "jquery": "^3.1.1",
+    "vue": "^2.0.5",
     "webpack": "^1.13.3",
     "webpack-stream": "^3.2.0"
   }
