--- a/package.json
+++ b/package.json
@@ -1,36 +1,37 @@
 {
-    "name": "awesome-portfolio",
-    "version": "1.0.0",
-    "description": "Awesome Portfolio - WordPress Plugin",
-    "main": "gulpfile.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/giolf/awesome-portfolio.git"
-    },
-    "author": "Giovanni Far",
-    "license": "GPL-3.0",
-    "bugs": {
-        "url": "https://github.com/giolf/awesome-portfolio/issues"
-    },
-    "homepage": "https://github.com/giolf/awesome-portfolio#readme",
-    "devDependencies": {
-        "babel-core": "^6.18.2",
-        "babel-loader": "^6.2.7",
-        "babel-preset-es2015": "^6.18.0",
-        "css-loader": "^0.26.0",
-        "gulp": "^3.9.1",
-        "gulp-flatten": "^0.3.1",
-        "gulp-sass": "^2.3.2",
-        "gulp-total-task-time": "^0.1.0",
-        "imports-loader": "^0.6.5",
-        "vue": "^2.0.5",
-        "vue-loader": "^9.9.5",
-        "vue-resource": "^1.0.3",
-        "vuex": "^2.0.0",
-        "webpack": "^1.13.3",
-        "webpack-stream": "^3.2.0"
-    }
+  "name": "awesome-portfolio",
+  "version": "1.0.0",
+  "description": "Awesome Portfolio - WordPress Plugin",
+  "main": "gulpfile.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/giolf/awesome-portfolio.git"
+  },
+  "author": "Giovanni Far",
+  "license": "GPL-3.0",
+  "bugs": {
+    "url": "https://github.com/giolf/awesome-portfolio/issues"
+  },
+  "homepage": "https://github.com/giolf/awesome-portfolio#readme",
+  "devDependencies": {
+    "babel-core": "^6.18.2",
+    "babel-loader": "^6.2.7",
+    "babel-plugin-transform-object-rest-spread": "^6.19.0",
+    "babel-preset-es2015": "^6.18.0",
+    "css-loader": "^0.26.0",
+    "gulp": "^3.9.1",
+    "gulp-flatten": "^0.3.1",
+    "gulp-sass": "^2.3.2",
+    "gulp-total-task-time": "^0.1.0",
+    "imports-loader": "^0.6.5",
+    "vue": "^2.0.5",
+    "vue-loader": "^9.9.5",
+    "vue-resource": "^1.0.3",
+    "vuex": "^2.0.0",
+    "webpack": "^1.13.3",
+    "webpack-stream": "^3.2.0"
+  }
 }
