--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-preset-es2015": "^6.18.0",
     "css-loader": "^0.26.0",
     "gulp": "^3.9.1",
+    "gulp-environments": "^0.1.1",
     "gulp-flatten": "^0.3.1",
     "gulp-sass": "^2.3.2",
     "gulp-total-task-time": "^0.1.0",
